--- a/lscdiag/public/index.html
+++ b/lscdiag/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/fira_code/fira_code.css">
+    <link rel="stylesheet" href="https://unpkg.com/firacode@1.205.0/distr/fira_code.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!--
