feat: Runnable code

--- a/lscdiag/public/index.html
+++ b/lscdiag/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <script src='https://embed.runkit.com'></script>
     <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
     <link rel="stylesheet" href="https://unpkg.com/firacode@1.205.0/distr/fira_code.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
